--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,16 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+# Research Intern
+- company: Konkuk University Natural Language Processing Lab
+  position: Research Intern
+  duration: Aug, 2020 &mdash; July, 2021
+  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	
+  <ul class="resume-item-list">
+    <li>A project you are proud of</li>
+    <li>Another awesome project</li>
+    <li>or a team or department you worked with</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+  summary:
+  <ul class="resume-item-list">
+    <li>Participated in a weekly study group to learn and practice deep learning algorithms for NLP.</li>
+    <li>Audited a graduate-level course in NLP, gaining insights into various tasks in the NLP field.</li>
+    <li>Conducted individual research on machine translation during the internship period.</li></ul>
