--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Java & Spring
+  description: 掌握Java的集合、抽象类、枚举类、泛型、注解等
 
 # Communications strategy
 - skill: Communications strategy
