--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,12 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: 本科
+  uni: 江苏大学京江学院
+  year: 2022 &mdash; 2024
+  award: .
+  summary: .
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: 大专
+  uni: 南京工业职业技术大学
+  year: 2019 &mdash; 2022
+  award: .
+  summary: .
