--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -2,6 +2,7 @@
 # Organizational leadership
 - skill: Java & Spring
   description: 掌握Java的集合、抽象类、枚举类、泛型、注解等
+               熟悉Mybatis、Mybatis Plus、Spring、Spring MVC、Shiro、SpringBoot、Spring Cloud、Spring Security主流开发框架
 
 # Communications strategy
 - skill: Communications strategy
