--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,11 +2,11 @@
 - degree: 本科
   uni: 江苏大学京江学院
   year: 2022 &mdash; 2024
-  award: .
-  summary: .
+  award: 软件工程
+  summary: 
 
 - degree: 大专
   uni: 南京工业职业技术大学
   year: 2019 &mdash; 2022
-  award: .
+  award: 软件技术
   summary: .
