--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,5 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
-
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: 南京黑炎豹科技有限公司
+  position: NanJing,JiangSu
+  duration:  2022.3 &mdash; 2022.9
+  summary: <ul class="resume-item-list"><li>1.根据新需求对现有的业务进行迭代</li><li>2.参与了业务通知系统、逻辑流程图、需求分析</li><li>3.配合项目小组的成员积极完成各个功能模块</li><li>4.配合小组成员完成了智慧园区中与甲方已存在的OA系统、考勤系统的数据对接模块</li></ul>
