--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "NanJing,JiangSu"
 resume_header_contact_info:     "NanJing,JiangSu • +86 188 8806 0737 • supanpan199919@163.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>性别男，爱好女</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
