--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "苏盼盼"
-resume_title:                   "VP of Global Communications"
+resume_title:                   "P_P -> "
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "supanpan199919@163.com"
@@ -23,7 +23,7 @@ resume_contact_address:         "NanJing,JiangSu"
 resume_header_contact_info:     "NanJing,JiangSu • +86 188 8806 0737 • supanpan199919@163.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>性别男，爱好女</p>"
+resume_header_intro: "<p>热爱技术，喜欢探索新技术</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
