--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,7 +1,7 @@
 # Skills
 # Organizational leadership
 - skill: Java & Spring
-  description: <ul class="resume-item-list"><li>1.掌握Java的集合、抽象类、枚举类、泛型、注解等</li><li>2.熟悉Mybatis、Mybatis Plus、Spring、Spring MVC、Shiro、SpringBoot、Spring Cloud、Spring Security主流开发框架</li><li>3.熟悉GC常用算法，熟悉常见垃圾收集器</li><li>4.了解微服务相关中间件:Nacos、Ribbon、Gateway、Feign、ElasticSearch、Eureka、 Sentinel 的应用</li><li>5.掌握常用设计模式:模板方法、策略模式、工厂模式等</li></ul>
+  description: <ul class="resume-item-list"><li>1.掌握Java的集合、抽象类、枚举类、泛型、注解等</li><li>2.熟悉Mybatis、Mybatis Plus、Spring、Spring MVC、Shiro、SpringBoot、Spring Cloud、Spring Security主流开发框架</li><li>3.熟悉GC常用算法，熟悉常见垃圾收集器</li><li>4.了解微服务相关中间件:Nacos、Ribbon、Gateway、Feign、ElasticSearch、Eureka、 Sentinel 的应用</li><li>5.掌握常用设计模式:模板方法、策略模式、工厂模式等</li><li>6.熟练使用Spring Boot自定义starter组件实现自动配置</li></ul>
 
 # Communications strategy
 - skill: Linux & Docker & SQL & Nginx
