--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,5 +1,5 @@
 # Skills
-- skill: Soft Skills
+- skill: soft@skills
   description: <ul class="resume-item-list">
     <li>Empathy and personal/team communication skills</li>
     <li>Continuous technical and personal improvement</li>
@@ -9,31 +9,27 @@
     <li>Strong troubleshooting and problem-solving skills</li>
     </ul>
 
-- skill: DevSecOps
+- skill: devsecops@skills
   description: <ul class="resume-item-list">
-    <li>Building and deploying solutions on AWS, Azure, DigitalOcean, Hetzner</li>
-    <li>Container orchestration and management with Kubernetes (Vanilla, RKE, k3s), Docker/Docker Swarm</li>
-    <li>Managing GitOps patterns for deployment also with Fleet</li>
-    <li>Managed Kubernetes experience with Rancher, AKS and EKS clusters</li>
-    <li>Infrastucture provisioning with HashiCorp Packer and Terraform, Ansible and AWX</li>
-    <li>Building pipelines with GitLab CI/CD, GitHub Actions and Jenkins</li>
-    <li>Managing and versioning codebases with GitLab and GitHub</li>
-    <li>Writing automation scripts in Bash, Python and PowerShell</li>
-    <li>Experience with distributed systems like Apache Kafka</li>
-    <li>Monitoring infrastructure with Prometheus and Grafana stack</li>
-    <li>Building observability solutions with ELK (Elasticsearch, Logstash, Kibana)</li>
-    <li>Managing RDBMS system such as PostgreSQL and SQL Server 2012/2014</li>
+    <li><b>Cloud:~$></b> AWS, Azure, DigitalOcean, Hetzner</li>
+    <li><b>Container and Orchestration:~$></b> Kubernetes (Vanilla, RKE, k3s), Docker/Docker Swarm</li>
+    <li><b>Managed Kubernetes:~$></b> Rancherv2.5/v2.7, AKS, EKS</li>
+    <li><b>GitOps:~$></b> Fleet, ArgoCD</li>
+    <li><b>Monitoring:~$></b> Prometheus, Grafana</li>
+    <li><b>Observability:~$></b> ELK (Elasticsearch, Logstash, Kibana)</li>
+    <li><b>Infrastructure as Code:~$></b> HashiCorp Packer, Terraform, Ansible, AWX</li>
+    <li><b>CI/CD:~$></b> GitLab CI/CD, GitHub Actions, Jenkins</li>
+    <li><b>Version Control:~$></b> GitLab, GitHub</li>
+    <li><b>Scripting:~$></b> Bash, Python, PowerShell</li>
+    <li><b>Distributed Systems:~$></b> Apache Kafka</li>
+    <li><b>Databases:~$></b> PostgreSQL, SQL Server 2012/2014</li>
     </ul>
 
-- skill: Systems, Security, Networking
+- skill: systems@skills
   description: <ul class="resume-item-list">
-    <li>Configuration and maintenance of hardware/software systems</li>
-    <li>Maintenance, support, backup strategies and restore</li>
-    <li>Log analysis, troubleshooting</li>
-    <li>In-depth knowledge of Linux/UNIX and Microsoft Windows system applications and operating systems</li>
-    <li>Experience in managing firewall and security policies, networking subnetting and VLANs</li>
-    <li>Experience with reverse proxy configuration and load balancers secured with up-to-date security best practices</li>
-    <li>Experience with HTTPS, SSH and most common security-based protocols</li>
-    <li>Experience with configuration and maintenance of SSL and IPsec VPN systems</li>
+    <li><b>Systems:~$></b> Ubuntu/Debian, OpenSUSE/SLES, Microsoft Windows Server</li>
+    <li><b>Networking:~$></b> Firewalls, security policies, subnetting, VLANs, VPNs, reverse proxies and load balancers</li>
+    <li><b>Analysis:~$></b> Logs, metrics, traces, graphs</li>
+    <li><b>Protocols:~$></b> TCP, SSH, HTTPS, IPSec</li>
     </ul>
 
