--- a/_config.yml
+++ b/_config.yml
@@ -11,19 +11,19 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "苏盼盼"
-resume_title:                   "P_P -> "
+resume_title:                   "个人站 "
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "supanpan199919@163.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
 resume_contact_telephone:       "+86 188 8806 0737"
-resume_contact_address:         "NanJing,JiangSu"
+resume_contact_address:         "Nanjing,JiangSu"
 
-resume_header_contact_info:     "NanJing,JiangSu • +86 188 8806 0737 • supanpan199919@163.com"
+resume_header_contact_info:     "Nanjing,JiangSu • +86 188 8806 0737 • supanpan199919@163.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>热爱技术，喜欢探索新技术</p>"
+resume_header_intro: "<p>🌾热爱技术，喜欢探索新技术</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -47,12 +47,8 @@ resume_section_associations:    true
 resume_social_links:
   resume_github_url:            "https://github.com/AtwoodPa"
   resume_gitee_url:           "https://gitee.com/su-panpan0419"
-  resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://123.60.185.233/#/"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  resume_website_url:           "https://p_p_00101010.gitee.io/hexo-blog/"
 resume_print_social_links:      false
 
 # Design settings
